# lib/api-spec/openapi.yaml
@@ -353,7 +353,7 @@ components:
           type: string
         role:
           type: string
-          enum: [donor, ngo, volunteer]
+          enum: [donor, ngo, volunteer, admin]
         name:
           type: string
         phone:
@@ -381,6 +381,8 @@ components:
           type: ["string", "null"]
         availabilityStatus:
           type: ["string", "null"]
+        darpanId:
+          type: ["string", "null"]
         createdAt:
           type: string
           format: date-time
@@ -391,7 +393,7 @@ components:
       properties:
         role:
           type: string
-          enum: [donor, ngo, volunteer]
+          enum: [donor, ngo, volunteer, admin]
         name:
           type: string
         phone:
@@ -418,6 +420,8 @@ components:
         vehicleType:
           type: string
         availabilityStatus:
+          type: string
+        darpanId:
           type: string
 
     Donation:
